...
        directItem.isEnabled = !store.isLaunching
        let proxyItem = menu.addItem(withTitle: "使用 HTTP 代理启动",
                                     action: #selector(proxyLaunch), keyEquivalent: "")
        proxyItem.target = self
        proxyItem.isEnabled = !store.isLaunching
        menu.addItem(withTitle: "显示小组件", action: #selector(showWidgetAction), keyEquivalent: "") .target = self
        menu.addItem(withTitle: "全部管理", action: #selector(showManagerAction), keyEquivalent: ",").target = self
        menu.addItem(.separator())
        menu.addItem(withTitle: "退出 Instance Dock", action: #selector(quit), keyEquivalent: "q").target = self
        statusItem.menu = menu
        statusItem.button?.performClick(nil)
        statusItem.menu = nil
    }
...
